Implementing custom UserDefaults in OnBoardingExample

--- a/OnBoardingExample/OnBoardingExample/Localizable.xcstrings
+++ b/OnBoardingExample/OnBoardingExample/Localizable.xcstrings
@@ -18,6 +18,22 @@
         }
       }
     },
+    "ContentView" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "ContentView"
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "ContentView"
+          }
+        }
+      }
+    },
     "contentView.showOnboarding" : {
       "extractionState" : "manual",
       "localizations" : {
